Création d'un user en DB / Controller (AuthController) / Models (User / Address / City / Club / Organization / ZipCode) + Documentation Register
